syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";

option go_package = "uniswap/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {
		option (google.api.http) = {
			post: "/v1/user"
			body: "*"
		};
	};
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply) {
		option (google.api.http) = {
			get: "/v1/user/{id}"
		};
	};
	rpc ListUser (ListUserRequest) returns (ListUserReply);
}

message CreateUserRequest {
	string setting_json = 1;
}
message CreateUserReply {
	uint64 id = 1;
}

message UpdateUserRequest {}
message UpdateUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}

message GetUserRequest {
	uint64 id = 1;
}
message GetUserReply {
	string setting_json = 1;
	string created_at = 2;
	string updated_at = 3;
}

message ListUserRequest {}
message ListUserReply {}